crates/nash-solve/tests/snapshots/inference__labeled_ctor_empty_pattern_and_missing_projection-2.snap
---
source: crates/nash-solve/tests/inference.rs
description: "module Main exposing (..)\ntype box = Box { value : unit }\nbad : box -> unit\nbad e = e.missing\n"
info: diagnostic
---
nash::type::missing_field

  × Record has no field `missing`.
   ╭─[Main.nash:4:9]
 3 │ bad : box -> unit
 4 │ bad e = e.missing
   ·         ────┬────
   ·             ╰── field `missing` of `e`
   ╰────
  help: Record type: box

        Did you mean `value`?

        Available fields: `value`.
