crates/nash-solve/tests/snapshots/inference__labeled_ctor_empty_pattern_and_missing_projection.snap
---
source: crates/nash-solve/tests/inference.rs
description: "Code:\n\nmodule Main exposing (..)\ntype box = Box { value : unit }\nmake = Box { value = () }\nget : box -> unit\nget {} = ()\n"
---
get : box -> unit
make : box
