crates/nash-solve/tests/snapshots/inference__labeled_ctor_higher_kinded_projection_preserves_application.snap
---
source: crates/nash-solve/tests/inference.rs
description: "Code:\n\nmodule Main exposing (..)\ntype holder 'f 'a = Holder { value : 'f 'a }\ntype alias wrapped 'f 'a = holder 'f 'a\nget : wrapped 'f 'a -> 'f 'a\nget h = h.value\nmain = get (Holder [()])\n"
---
get : forall a f. Apply f a => wrapped f a -> f a
main : forall a. (FromUnit a, Storable a) => list a
