crates/nash-solve/tests/snapshots/inference__labeled_ctor_multi_access_error.snap
---
source: crates/nash-solve/tests/inference.rs
description: "module Main exposing (..)\ntype choice = First { value : unit } | Second { value : unit }\nget : choice -> unit\nget b = b.value\n"
info: diagnostic
---
nash::type::not_a_record

  × Expected a record, found `choice`.
   ╭─[Main.nash:4:9]
 3 │ get : choice -> unit
 4 │ get b = b.value
   ·         ───┬───
   ·            ╰── field `value` of `b`
   ╰────
