crates/nash-solve/tests/snapshots/inference__labeled_ctor_twins_preserve_labeled_construction.snap
---
source: crates/nash-solve/tests/inference.rs
description: "Code:\n\nmodule Main exposing (..)\ntype Box 'a = Box { z : 'a }\ntype box 'a = Box { z : 'a }\nlittle : box unit\nlittle = Box { z = () }\nget : box 'a -> 'a\nget b = b.z\n"
---
get : forall a. box a -> a
little : box unit
