crates/nash-solve/tests/snapshots/inference__labeled_ctor_update.snap
---
source: crates/nash-solve/tests/inference.rs
description: "Code:\n\nmodule Main exposing (..)\ntype box 'a = Box { value : 'a }\nchange : box unit -> box unit\nchange b = { b | value = () }\n"
---
change : box unit -> box unit
